--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "big.js": "^6.1.1",
     "ethers": "^5.5.2",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
