--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "big.js": "^6.1.1",
+    "cairo-lang": "^1.0.1",
     "ethers": "^5.5.2",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
@@ -20,7 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "starknet": "^2.2.0",
+    "starknet": "^2.5.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "use-deep-compare-effect": "^1.8.1",
